# watchdog-service

./: .gitignore  CMakeLists.txt
data/: watchdog.json
docs/: README.md
include/watchdog/: linux_api.h  native_os_api.h  platform_api.h  watchdog.h  windows_api.h
src/: main.cpp
src/utils/: math.cpp  template_literal.cpp
src/watchdog/: linux_api.cpp  platform_api.cpp  watchdog.cpp  windows_api.cpp
test/: test_main.cpp
